# Fly-In

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  test.txt
errors/: MapErrors.py  __init__.py
logs/: Logger.py
maps/challenger/: 01_the_impossible_dream.txt
maps/hard/: 01_maze_nightmare.txt
parsing/: MapParser.py
parsing/models/: ConnectionModel.py  HubModel.py  MapModel.py  __init__.py
src/: Controller.py  FileLoader.py  GraphBuilder.py  __init__.py
src/graph/: Graph.py  __init__.py
src/graph/algorithms/: Dijkstra.py
src/graph/link/: Link.py  __init__.py
src/graph/node/: EndNode.py  HubNode.py  Node.py  StartNode.py  __init__.py
src/logs/: Logger.py
src/parsing/: MapParser.py  __init__.py
src/parsing/errors/: MapErrors.py  __init__.py
src/parsing/models/: ConnectionModel.py  HubModel.py  MapModel.py
src/parsing/utils/: Enum.py  __init__.py
src/simulation/: PathfindingAlgorithm.py  Simulation.py
src/simulation/algorithms/: AlgorithmProtocol.py  Dijkstra.py
src/simulation/drone/: Drone.py  __init__.py
src/utils/: __init__.py  env_check.py
src/utils/PausingArgumentParser/: PausingArgumentParser.py  __init__.py
src/utils/RunSecurity/: RunSecurity.py
src/utils/check_env/: __init__.py  env_check.py
src/utils/logger/: Logger.py  __init__.py
src/view/: ViewApp.py  ViewQT.py
tests/: test00Loader.py  test01Parsing.py  test03Builder.py  test04Dijkstra.py  test05PathFindingAlgoritm.py  test06Controller.py  test07Simulation.py  testNode.py  testParsing.py
utils/: __init__.py  env_check.py
(+6 files in other folders)
